--- a/controllers/sass/screen.scss
+++ b/controllers/sass/screen.scss
@@ -7,3 +7,11 @@
 @import "buttons/standard";
 @import "buttons/dpad";
 @import "buttons/joystick";
+
+#controls {
+	position:absolute;
+	top:0;
+	bottom:0;
+	right:0;
+	left:0;
+}
