--- a/controllers/sass/buttons/_dpad.scss
+++ b/controllers/sass/buttons/_dpad.scss
@@ -1,11 +1,3 @@
-button {
-	border:none;
-	background:#f00;
-
-	&:active {
-	background:#0f0;
-	}
-}
 
 
 .dpad {
@@ -22,39 +14,49 @@ button {
 
 	.dpad-centre {
 		width:33%;
-		height:33%;
 		top:33%;
 		left:33%;
+		display:none;
 	}
 
 	.dpad-left {
 		height:33%;
 		top:33%;
 		left:0;
-		width:33%;
+		width:45%;
+		background-image:url(../img/dpad-left.png);
+		background-size:cover;
+		background-position:right center;
 	}
-
-
 
 	.dpad-right {
 		height:33%;
 		top:33%;
-		left:66%;
-		width:33%;
+		left:55%;
+		width:45%;
+		background-image:url(../img/dpad-right.png);
+		background-size:cover;
+		background-position:left center;
 	}
 
 	.dpad-up {
 		width:33%;
 		left:33%;
 		top:0;
-		height:33%;
+		height:45%;
+		background-image:url(../img/dpad-up.png);
+		background-size:cover;
+		background-position:bottom center;
 	}
 
 	.dpad-down {
 		width:33%;
 		left:33%;
-		top:66%;
-		height:33%;
+		top:55%;
+		height:45%;
+		background-image:url(../img/dpad-down.png);
+		background-size:cover;
+		background-position:top center;
 	}
 
 }
