--- a/controllers/sass/buttons/_standard.scss
+++ b/controllers/sass/buttons/_standard.scss
@@ -1,14 +1,15 @@
 button {
 	border:none;
-	background:#f00;
-
+	background-color:transparent;
 	&:active {
-	background:#0f0;
+
 	}
 }
 
 .button {
 	width:50px;
 	height:50px;
+	background-image:url(../img/button-up-overlay.png);
+	background-size:cover;
 	border-radius:50px;
 }
