--- a/bridge/public/gamepad/sass/screen.scss
+++ b/bridge/public/gamepad/sass/screen.scss
@@ -4,6 +4,14 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+
+html, body {
+	overflow:hidden;
+	height:100%;
+	width:100%;
+}
+
+
 @import "buttons/standard";
 @import "buttons/dpad";
 @import "buttons/joystick";
