--- a/bridge/public/gamepad/sass/screen.scss
+++ b/bridge/public/gamepad/sass/screen.scss
@@ -8,9 +8,12 @@
 html, body {
 	overflow:hidden;
 	height:100%;
-	width:100%;
+	width:100%;	
 }
 
+* {
+  -webkit-user-select: none;
+}
 
 @import "buttons/standard";
 @import "buttons/dpad";
